--- a/app/src/main/res/layout/fragment_quatations.xml
+++ b/app/src/main/res/layout/fragment_quatations.xml
@@ -147,7 +147,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/sbmt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
