--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/head"
-        app:srcCompat="@drawable/image" />
+        app:srcCompat="@drawable/dispatch_a_technician_header" />
 
     <TextView
         android:id="@+id/intro"
